--- a/Final_project_initial_results.ipynb
+++ b/Final_project_initial_results.ipynb
@@ -320,7 +320,8 @@
    ],
    "source": [
     "# write your code here\n",
-    "cm = confusion_matrix(ytest, clf.predict(xtest))\n",
+    "predicted = clf.predict(xtest)\n",
+    "cm = confusion_matrix(ytest, predicted)\n",
     "cm_df = pd.DataFrame(cm, columns = [\"loss\", 'win'])\n",
     "print(cm_df)"
    ]
@@ -340,7 +341,7 @@
     }
    ],
    "source": [
-    "cm = confusion_matrix(ytest, clf.predict(xtest))\n",
+    "cm = confusion_matrix(ytest, predicted)\n",
     "cm_df = pd.DataFrame(cm, columns = [\"loss\", 'win'])\n",
     "def custom_precision_recall(conf_matrix):\n",
     "    # conf matrix composition:\n",
