Added documentation outline to cleaned_data.ipynb

--- a/Dataset/cleaned_data.ipynb
+++ b/Dataset/cleaned_data.ipynb
@@ -28,27 +28,35 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
+    "# Install dataset base \n",
     "!{sys.executable} -m pip install sportsipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### NOTE: REMOVE ANY OF THESE IMPORTS THAT AREN'T NEEDED ANYMORE. I REMOVED ###\n",
+    "### THE RESULTS STUFF THAT DIDN'T HAVE TO DO WITH THE DATASET SO SOME OF    ###\n",
+    "### MIGHT NOT BE NEEDED ANYMORE. MAKE SURE TO LEAVE IN THIS NOTEBOOK ONLY   ###\n",
+    "### THINGS REQUIRED FOR LOADING THE CLEANED DATA LIKE FUNCTIONS FOR LOADING ###\n",
+    "### AND STUFF THAT CAN BE CALLED IN THE INDIVIDUAL CLASSIFIER NOTEBOOKS.    ###\n",
+    "### REMOVE ANYTHING ELSE LIKE THINGS FOR TESTING AND STUFF NOT REQUIRED FOR ###\n",
+    "### THE CLEANED DATA. DON'T WORRY ABOUT ACCIDENTLY DESTROYING THE PROJECT   ###\n",
+    "### LOL BECAUSE EVERYTHING IS BACKED UP IN YOUR BRANCH.                     ###\n",
+    "\n",
+    "# Stats from dataset\n",
     "from sportsipy.nfl.boxscore import Boxscores, Boxscore\n",
-    "Boxscores(1,2020).games\n",
+    "\n",
+    "# Required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
     "import math\n",
     "\n",
-    "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "# sklearn utilities\n",
     "from sklearn import datasets\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -68,6 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What does this do and how should it be used?\n",
     "def game_data_from_year(year):\n",
     "    returnDF=pd.DataFrame()\n",
     "    for week in range(1,22):\n",
@@ -85,6 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is this?\n",
     "data200=[]\n",
     "for i in range(10):\n",
     "    data200.append(game_data_from_year(2000+i))\n",
@@ -97,6 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is this?\n",
     "data201=[]\n",
     "for i in range(10):\n",
     "    data201.append(game_data_from_year(2010+i))\n",
@@ -109,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is this?\n",
     "data200=[]\n",
     "for i in range(10):\n",
     "    data200.append(pd.read_csv(os.getcwd() + '/data200'+str(i)+'.csv', header=0))"
@@ -120,6 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is this?\n",
     "data201=[]\n",
     "for i in range(10):\n",
     "    data201.append(pd.read_csv(os.getcwd() + '/data201'+str(i)+'.csv', header=0))"
@@ -131,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teams=['NOR', 'MIN', 'CHI', 'DET', 'MIA', 'BUF', 'TAM', 'CLE', 'PIT', 'ATL', 'OTI', 'RAI', 'NWE', 'CIN', 'HTX', 'CLT', 'JAX', 'DEN', 'NYG', 'CAR', 'CRD', 'RAM', 'SEA', 'SFO', 'GNB', 'PHI', 'WAS', 'DAL', 'RAV', 'NYJ', 'KAN', 'SDG']"
+    "# NFL team abbreviations\n",
+    "teams = ['NOR', 'MIN', 'CHI', 'DET', 'MIA', 'BUF', 'TAM', 'CLE', 'PIT', 'ATL', 'OTI', 'RAI', 'NWE', 'CIN', 'HTX', 'CLT', 'JAX', 'DEN', 'NYG', 'CAR', 'CRD', 'RAM', 'SEA', 'SFO', 'GNB', 'PHI', 'WAS', 'DAL', 'RAV', 'NYJ', 'KAN', 'SDG']"
    ]
   },
   {
@@ -140,13 +154,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
+    "# What is this used for?\n",
     "newcols = ['attendance','first_downs','fourth_down_attempts','fourth_down_conversions','fumbles','fumbles_lost','interceptions',\n",
     " 'net_pass_yards','pass_attempts','pass_completions','pass_touchdowns','pass_yards','penalties','points','rush_attempts',\n",
     " 'rush_touchdowns','rush_yards','third_down_attempts','third_down_conversions','time_of_possession','times_sacked',\n",
     " 'total_yards','turnovers','yards_from_penalties','yards_lost_from_sacks','duration','roof','surface',\n",
     " 'time','temperature','humidity','wind','week','win']\n",
     "\n",
+    "# What does this do and how should it be used?\n",
     "def cleandata(newdata):\n",
     "    teamdata = []\n",
     "    for team in teams:\n",
@@ -236,7 +251,7 @@
     "            teamdata[teams.index(g[53])][1].append(team1)\n",
     "    return teamdata\n",
     "\n",
-    "\n",
+    "# What does this do and how should it be used?\n",
     "def getTraining(data2014,data2015,games):\n",
     "    counters=[[0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0]]\n",
     "    trainingX=[]\n",
@@ -304,9 +319,7 @@
     "        trainingX.append(averagesH+averagesA+[venue]+[field]+[time]+weather1)\n",
     "        trainingY.append(win)\n",
     "\n",
-    "    return trainingX,trainingY\n",
-    "\n",
-    "\n"
+    "    return trainingX,trainingY"
    ]
   },
   {
@@ -315,6 +328,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is this for? If it was just for testing then you\n",
+    "# can delete it\n",
     "xtraining=[]\n",
     "ytraining=[]\n",
     "for i in range(1,10):\n",
@@ -322,72 +337,6 @@
     "    xtraining+=xtraintemp\n",
     "    ytraining+=ytraintemp"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lin -0.011984987816265225\n",
-      "log 0.5341098169717138\n",
-      "DT 0.5058236272878536\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:762: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RF 0.5524126455906821\n",
-      "SV 0.5590682196339434\n"
-     ]
-    }
-   ],
-   "source": [
-    "xtrain,xtest,ytrain,ytest= train_test_split(xtraining,ytraining)\n",
-    "\n",
-    "\n",
-    "\n",
-    "lin = LinearRegression()\n",
-    "lin.fit(xtrain, ytrain)\n",
-    "print(\"lin\",lin.score(xtest,ytest))\n",
-    "log = LogisticRegression()\n",
-    "log.fit(xtrain, ytrain)\n",
-    "print(\"log\",log.score(xtest,ytest))\n",
-    "DT = DecisionTreeClassifier()\n",
-    "DT.fit(xtrain, ytrain)\n",
-    "print(\"DT\",DT.score(xtest,ytest))\n",
-    "RF = RandomForestClassifier()\n",
-    "RF.fit(xtrain, ytrain)\n",
-    "print(\"RF\",RF.score(xtest,ytest))\n",
-    "SV = SVC()\n",
-    "SV.fit(xtrain, ytrain)\n",
-    "print(\"SV\",SV.score(xtest,ytest))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
