Moved notebook for ensemble classifier with the other classifiers and added a notebook for running the classifier so he simply has to clone the repo and run the notebook

--- a/Run_Classifier.ipynb
+++ b/Run_Classifier.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b90ac21",
+   "id": "74b73c6d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This will be where we put the final, run-able ensemble classifier"
+    "# This is where we will import the ensemble classifier and set up the code to run it\n",
+    "# so that he can simply run the notebook. This will be left as a jupyter notebook"
    ]
   }
  ],
