--- a/Legacy/Dataset/cleaned_data.ipynb
+++ b/Legacy/Dataset/cleaned_data.ipynb
@@ -71,8 +71,10 @@
     "def game_data_from_year(year):\n",
     "    returnDF=pd.DataFrame()\n",
     "    try: \n",
+    "        #goes through the year getting each week of games\n",
     "        for week in range(1,22):\n",
     "            weekDF=pd.DataFrame()\n",
+    "            #goes through each week getting each game\n",
     "            for game in range(len(Boxscores(week,year).games[str(week)+\"-\"+str(year)])):\n",
     "                weekDF=pd.concat([weekDF,Boxscore(Boxscores(week,year).games[str(week)+\"-\"+str(year)][game]['boxscore']).dataframe])\n",
     "            weekDF[\"week\"] = [week]*len(Boxscores(week,year).games[str(week)+\"-\"+str(year)])\n",
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,18 +196,25 @@
     "#@return a list of      lists     of lists\n",
     "#          team      home vs away    stats for the game for that team\n",
     "def cleandata(newdata):\n",
+    "    #makes a list to hold all the data of the right dimensions where each index is a team and in each of those lists, \n",
+    "    #0 inicates a home game and 1 indicates away\n",
     "    teamdata = []\n",
     "    for team in teams:\n",
     "        teamdata.append([[],[]])\n",
     "\n",
+    "    #loops through all the games that one would get from \n",
     "    for game in newdata:\n",
     "        g=list(game)\n",
+    "        \n",
+    "        #determines if the away team won or lost\n",
     "        if g[62]=='Away':\n",
+    "            #if the away team won, then we add a 1 to the end of the team 1 which is the away team, \n",
+    "            #and 0 to the end of team 2, to indicate if that was a win or loss for each team.\n",
     "            team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[1]\n",
     "            team2=[g[1]]+g[29:47]+[int(g[47][0:2])+float(g[47][3:5])/60]+g[48:53]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[0]\n",
     "\n",
     "\n",
-    "\n",
+    "            #next take all the strings and transform them into some int/double so we have a list of just numbers\n",
     "            team1[26]=  (1 if team1[26]=='Outdoors' else 0)\n",
     "            team2[26]=  (1 if team2[26]=='Outdoors' else 0)\n",
     "            team1[27]=  (1 if team1[27]=='Grass' else 0)\n",
@@ -214,7 +223,8 @@
     "            team2[28]=  (int(team2[28].split(\":\")[0])+12 if team2[28].split(\":\")[1][2:4]==\"pm\" else int(team2[28].split(\":\")[0])) + float(team2[28].split(\":\")[1][0:2])/60\n",
     "\n",
     "            \n",
-    "            \n",
+    "            #break up weather into just it's component values, dealing with nan by replacing them with the averages as \n",
+    "            #calulated from some year\n",
     "            weather1=[]\n",
     "            if isinstance(team1[29],float):\n",
     "                weather1=[55,0.5,9]\n",
@@ -233,14 +243,17 @@
     "                weather2=[int(team2[29].split(\" \")[0]),.50, (0 if team2[29].split(\" \")[3]=='wind,' or team2[29].split(\" \")[3]=='wind' else  int(team2[29].split(\" \")[3]))]\n",
     "\n",
     "\n",
-    "\n",
+    "            \n",
     "            team1=team1[0:29]+weather1+team1[30:32]\n",
     "            team2=team2[0:29]+weather2+team2[30:32]\n",
     "\n",
+    "            \n",
+    "            #since the wining team is away when we look at the winning abreviation at 63 we are looking at the \n",
+    "            #away abreviation and so we store it in the away list for that team\n",
     "            teamdata[teams.index(g[63])][1].append(team1)\n",
     "            teamdata[teams.index(g[53])][0].append(team2)\n",
     "        else:\n",
-    "            \n",
+    "            ##Mostly the same comments except for a few changes, here the 1 and 0 are in oposite spots because the home team won\n",
     "            team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[0]\n",
     "            team2=[g[1]]+g[29:47]+[int(g[47][0:2])+float(g[47][3:5])/60]+g[48:53]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[1]\n",
     "\n",
@@ -278,7 +291,7 @@
     "            team2=team2[0:29]+weather2+team2[30:32]\n",
     "\n",
     "\n",
-    "\n",
+    "            ##and here a few things are switched up to get things to be stored at the right spots.\n",
     "            teamdata[teams.index(g[63])][0].append(team2)\n",
     "            teamdata[teams.index(g[53])][1].append(team1)\n",
     "    return teamdata\n",
@@ -299,11 +312,16 @@
     "#@param games The raw data for the year in question\n",
     "#@return x,y where x has the columns listed above and y has 1 for home team win and 0 for away team win.\n",
     "def getTraining(data2014,data2015,games):\n",
+    "    #So first I make a list of counters to keep track of how many times we have seen each team, with home vs away built in.\n",
     "    counters=[[0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0]]\n",
     "    trainingX=[]\n",
     "    trainingY=[]\n",
+    "    \n",
+    "    #next we cycle through the games for a specific year\n",
     "    for game in range(len(games)):\n",
     "        g=list(games[game])\n",
+    "        \n",
+    "        #get the teams playing for that game\n",
     "        if g[62]=='Away':\n",
     "            awayabbr=g[63]\n",
     "            homeabbr=g[53]\n",
@@ -314,18 +332,23 @@
     "            win=1\n",
     "\n",
     "\n",
-    "\n",
+    "        #get the sum of the three games from the end of the last season, keeping attention to home vs away\n",
     "        averagesA=[]+data2014[teams.index(awayabbr)][1][-3]\n",
     "        for i in range(len(averagesA)):\n",
     "            averagesA[i]+=data2014[teams.index(awayabbr)][1][-2][i]+data2014[teams.index(awayabbr)][1][-1][i]\n",
+    "            \n",
+    "        #add the totals for this season up to this game, keeping attention to home vs away\n",
+    "        #this is where the counter play in since they keep us from going to the current game info and future game infos\n",
     "        for i in range(counters[teams.index(awayabbr)][1]):\n",
     "            for j in range(len(data2015[teams.index(awayabbr)][1][i])):\n",
     "                averagesA[i]+=data2015[teams.index(awayabbr)][1][i][j]\n",
+    "                \n",
+    "        #calculate the averages give the totals we just calculated and the counters\n",
     "        for i in range(len(averagesA)):\n",
     "            averagesA[i] = averagesA[i]/float(counters[teams.index(awayabbr)][1]+3)\n",
     "\n",
     "\n",
-    "\n",
+    "        ##same for the home team\n",
     "        averagesH=[]+data2014[teams.index(homeabbr)][0][-3]\n",
     "        for i in range(len(averagesH)):\n",
     "            averagesH[i]+=data2014[teams.index(homeabbr)][0][-2][i]+data2014[teams.index(homeabbr)][0][-1][i]\n",
@@ -335,15 +358,14 @@
     "        for i in range(len(averagesH)):\n",
     "            averagesH[i] = averagesH[i]/float(counters[teams.index(homeabbr)][0]+3)\n",
     "\n",
-    "\n",
+    "        #update counters for these teams\n",
     "        Ai=teams.index(awayabbr)\n",
     "        Hi=teams.index(homeabbr)\n",
     "        counters[Ai][1]+=1\n",
     "        counters[Hi][0]+=1\n",
     "\n",
-    "\n",
-    "        team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+[g[28]]+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[1]\n",
-    "\n",
+    "        #get the info about the game we could know before hand by getting the info for the game as we did in cleaned data\n",
+    "        team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[0]\n",
     "\n",
     "\n",
     "        venue=  (1 if team1[26]=='Outdoors' else 0)\n",
@@ -361,10 +383,11 @@
     "            weather1=[int(team1[29].split(\" \")[0]),.50, (0 if team1[29].split(\" \")[3]=='wind,' or team1[29].split(\" \")[3]=='wind' else  int(team1[29].split(\" \")[3]))]\n",
     "\n",
     "\n",
-    "\n",
+    "        #Add everything to the list of training datas\n",
     "        trainingX.append(averagesH+averagesA+[venue]+[field]+[time]+weather1)\n",
     "        trainingY.append(win)\n",
     "\n",
+    "    #return results\n",
     "    return trainingX,trainingY\n",
     "\n",
     "\n"
