--- a/Legacy/Dataset/cleaned_data.ipynb
+++ b/Legacy/Dataset/cleaned_data.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +227,16 @@
     "        \n",
     "        #determines if the away team won or lost\n",
     "        if g[62]=='Away':\n",
+    "            \n",
+    "            #index [1] attendance\n",
+    "            #indices [2:26] all away team game stats\n",
+    "            #index [28] durration\n",
+    "            #index [29:53]\n",
+    "            #index [56] roof\n",
+    "            #index [58:60] surface, time\n",
+    "            #index [61] weather\n",
+    "            #index [-1] week\n",
+    "            \n",
     "            #if the away team won, then we add a 1 to the end of the team 1 which is the away team, \n",
     "            #and 0 to the end of team 2, to indicate if that was a win or loss for each team.\n",
     "            team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[1]\n",
@@ -336,75 +346,81 @@
     "    trainingX=[]\n",
     "    trainingY=[]\n",
     "    \n",
+    "    madePlayoffs=[]\n",
+    "    for i in teams:\n",
+    "        madePlayoffs.append(0)\n",
+    "        \n",
+    "    for i in len(teams):\n",
+    "        for j in range(2):\n",
+    "            for g in data2014[i][j]:\n",
+    "                if g[-2]>=18:\n",
+    "                    madePlayoffs[i]=1\n",
+    "        \n",
     "    #next we cycle through the games for a specific year\n",
     "    for game in range(len(games)):\n",
     "        g=list(games[game])\n",
     "        \n",
-    "        #get the teams playing for that game\n",
-    "        if g[62]=='Away':\n",
-    "            awayabbr=g[63]\n",
-    "            homeabbr=g[53]\n",
-    "            win=0\n",
-    "        else:\n",
-    "            awayabbr=g[53]\n",
-    "            homeabbr=g[63]\n",
-    "            win=1\n",
+    "        if(g[-2]<17):\n",
+    "            #get the teams playing for that game\n",
+    "            if g[62]=='Away':\n",
+    "                awayabbr=g[63]\n",
+    "                homeabbr=g[53]\n",
+    "                win=0\n",
+    "            else:\n",
+    "                awayabbr=g[53]\n",
+    "                homeabbr=g[63]\n",
+    "                win=1\n",
     "\n",
     "\n",
-    "        #get the sum of the three games from the end of the last season, keeping attention to home vs away\n",
-    "        averagesA=[]+data2014[teams.index(awayabbr)][1][-3]\n",
-    "        for i in range(len(averagesA)):\n",
-    "            averagesA[i]+=data2014[teams.index(awayabbr)][1][-2][i]+data2014[teams.index(awayabbr)][1][-1][i]\n",
-    "            \n",
-    "        #add the totals for this season up to this game, keeping attention to home vs away\n",
-    "        #this is where the counter play in since they keep us from going to the current game info and future game infos\n",
-    "        for i in range(counters[teams.index(awayabbr)][1]):\n",
-    "            for j in range(len(data2015[teams.index(awayabbr)][1][i])):\n",
-    "                averagesA[i]+=data2015[teams.index(awayabbr)][1][i][j]\n",
-    "                \n",
-    "        #calculate the averages give the totals we just calculated and the counters\n",
-    "        for i in range(len(averagesA)):\n",
-    "            averagesA[i] = averagesA[i]/float(counters[teams.index(awayabbr)][1]+3)\n",
+    "            #get the sum of the three games from the end of the last season, keeping attention to home vs away\n",
+    "            averagesA=[]+data2014[teams.index(awayabbr)][1][-3]\n",
+    "            for i in range(len(averagesA)):\n",
+    "                averagesA[i]+=data2014[teams.index(awayabbr)][1][-2][i]+data2014[teams.index(awayabbr)][1][-1][i]\n",
     "\n",
-    "\n",
-    "        ##same for the home team\n",
-    "        averagesH=[]+data2014[teams.index(homeabbr)][0][-3]\n",
-    "        for i in range(len(averagesH)):\n",
-    "            averagesH[i]+=data2014[teams.index(homeabbr)][0][-2][i]+data2014[teams.index(homeabbr)][0][-1][i]\n",
-    "        for i in range(counters[teams.index(homeabbr)][0]):\n",
-    "            for j in range(len(data2015[teams.index(homeabbr)][0][i])):\n",
-    "                averagesH[i]+=data2015[teams.index(homeabbr)][0][i][j]\n",
-    "        for i in range(len(averagesH)):\n",
-    "            averagesH[i] = averagesH[i]/float(counters[teams.index(homeabbr)][0]+3)\n",
-    "\n",
-    "        #update counters for these teams\n",
-    "        Ai=teams.index(awayabbr)\n",
-    "        Hi=teams.index(homeabbr)\n",
-    "        counters[Ai][1]+=1\n",
-    "        counters[Hi][0]+=1\n",
-    "\n",
-    "        #get the info about the game we could know before hand by getting the info for the game as we did in cleaned data\n",
-    "        team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[0]\n",
-    "\n",
-    "\n",
-    "        venue=  (1 if team1[26]=='Outdoors' else 0)\n",
-    "        field=  (1 if team1[27]=='Grass' else 0)\n",
-    "        time=  (int(team1[28].split(\":\")[0])+12 if team1[28].split(\":\")[1][2:4]==\"pm\" else int(team1[28].split(\":\")[0])) + float(team1[28].split(\":\")[1][0:2])/60\n",
+    "            #add the totals for this season up to this game, keeping attention to home vs away\n",
+    "            #this is where the counter play in since they keep us from going to the current game info and future game infos\n",
+    "            for i in range(counters[teams.index(awayabbr)][1]):\n",
+    "                for j in range(len(data2015[teams.index(awayabbr)][1][i])):\n",
+    "                    averagesA[i]+=data2015[teams.index(awayabbr)][1][i][j]\n",
     "\n",
     "\n",
     "\n",
-    "        weather1=[]\n",
-    "        if isinstance(team1[29],float):\n",
-    "            weather1=[55,0.5,9]\n",
-    "        elif len(team1[29].split(\" \"))>6:\n",
-    "            weather1=[int(team1[29].split(\" \")[0]),float(team1[29].split(\" \")[4][0:-2])/100, (0 if team1[29].split(\" \")[6]=='wind,' or team1[29].split(\" \")[6]=='wind' else  int(team1[29].split(\" \")[6]))]\n",
-    "        else: \n",
-    "            weather1=[int(team1[29].split(\" \")[0]),.50, (0 if team1[29].split(\" \")[3]=='wind,' or team1[29].split(\" \")[3]=='wind' else  int(team1[29].split(\" \")[3]))]\n",
+    "            ##same for the home team\n",
+    "            averagesH=[]+data2014[teams.index(homeabbr)][0][-3]\n",
+    "            for i in range(len(averagesH)):\n",
+    "                averagesH[i]+=data2014[teams.index(homeabbr)][0][-2][i]+data2014[teams.index(homeabbr)][0][-1][i]\n",
+    "            for i in range(counters[teams.index(homeabbr)][0]):\n",
+    "                for j in range(len(data2015[teams.index(homeabbr)][0][i])):\n",
+    "                    averagesH[i]+=data2015[teams.index(homeabbr)][0][i][j]\n",
+    "\n",
+    "            #update counters for these teams\n",
+    "            Ai=teams.index(awayabbr)\n",
+    "            Hi=teams.index(homeabbr)\n",
+    "            counters[Ai][1]+=1\n",
+    "            counters[Hi][0]+=1\n",
+    "\n",
+    "            #get the info about the game we could know before hand by getting the info for the game as we did in cleaned data\n",
+    "            team1=g[1:20]+[int(g[20][0:2])+float(g[20][3:5])/60]+g[21:26]+([int(g[28].split(\":\")[0])+float(g[28].split(\":\")[1])/60] if not isinstance(g[28],float) else [3])+[g[56]]+g[58:60]+[g[61]]+[g[-1]]+[0]\n",
     "\n",
     "\n",
-    "        #Add everything to the list of training datas\n",
-    "        trainingX.append(averagesH+[counters[Hi][0]]+averagesA+[counters[Ai][1]]+[venue]+[field]+[time]+weather1+[year])\n",
-    "        trainingY.append(win)\n",
+    "            venue=  (1 if team1[26]=='Outdoors' else 0)\n",
+    "            field=  (1 if team1[27]=='Grass' else 0)\n",
+    "            time=  (int(team1[28].split(\":\")[0])+12 if team1[28].split(\":\")[1][2:4]==\"pm\" else int(team1[28].split(\":\")[0])) + float(team1[28].split(\":\")[1][0:2])/60\n",
+    "\n",
+    "\n",
+    "\n",
+    "            weather1=[]\n",
+    "            if isinstance(team1[29],float):\n",
+    "                weather1=[55,0.5,9]\n",
+    "            elif len(team1[29].split(\" \"))>6:\n",
+    "                weather1=[int(team1[29].split(\" \")[0]),float(team1[29].split(\" \")[4][0:-2])/100, (0 if team1[29].split(\" \")[6]=='wind,' or team1[29].split(\" \")[6]=='wind' else  int(team1[29].split(\" \")[6]))]\n",
+    "            else: \n",
+    "                weather1=[int(team1[29].split(\" \")[0]),.50, (0 if team1[29].split(\" \")[3]=='wind,' or team1[29].split(\" \")[3]=='wind' else  int(team1[29].split(\" \")[3]))]\n",
+    "\n",
+    "\n",
+    "            #Add everything to the list of training datas\n",
+    "            trainingX.append(averagesH+[counters[Hi][0]]+[madePlayoffs[Hi]]+averagesA+[counters[Ai][1]]+[madePlayoffs[Ai]]+[venue]+[field]+[time]+weather1+[year])\n",
+    "            trainingY.append(win)\n",
     "\n",
     "    #return results\n",
     "    return trainingX,trainingY\n",
