fixed errors with week stuff

--- a/Legacy/Dataset/cleaned_data.ipynb
+++ b/Legacy/Dataset/cleaned_data.ipynb
@@ -350,7 +350,7 @@
     "    for i in teams:\n",
     "        madePlayoffs.append(0)\n",
     "        \n",
-    "    for i in len(teams):\n",
+    "    for i in range(len(teams)):\n",
     "        for j in range(2):\n",
     "            for g in data2014[i][j]:\n",
     "                if g[-2]>=18:\n",
@@ -360,7 +360,7 @@
     "    for game in range(len(games)):\n",
     "        g=list(games[game])\n",
     "        \n",
-    "        if(g[-2]<17):\n",
+    "        if(int(g[-1])<17):\n",
     "            #get the teams playing for that game\n",
     "            if g[62]=='Away':\n",
     "                awayabbr=g[63]\n",
@@ -424,6 +424,8 @@
     "\n",
     "    #return results\n",
     "    return trainingX,trainingY\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
