Added test syspath code for importing parent and sibling packages

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -6,7 +6,51 @@
    "id": "otherwise-details",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the code for the classifier in this file and run everything here\n",
+    "# as a testing/results interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "608300fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert top level directory into the system path so parent and sibling \n",
+    "# modules can be imported \n",
+    "import sys\n",
+    "sys.path.insert(0, '../../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f567bed3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FootballML.Classifiers.Individual.logistic_regression_classifier import test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d8bf8699",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It worked\n"
+     ]
+    }
+   ],
+   "source": [
+    "test()"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
