Added syspath code to all results notebooks and testing methods to the code as an example of importing

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "otherwise-details",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
+    "# WORKING ON IT\n",
     "from FootballML.Classifiers.Individual.logistic_regression_classifier import test"
    ]
   },
@@ -44,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It worked\n"
+      "It worked for logistic regression\n"
      ]
     }
    ],
