--- a/FootballML/Individual_Results/neural_network_results.ipynb
+++ b/FootballML/Individual_Results/neural_network_results.ipynb
@@ -2,11 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "898f87fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the code for the classifier in this file and run everything here\n",
+    "# as a testing/results interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c35ed563",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert top level directory into the system path so parent and sibling \n",
+    "# modules can be imported \n",
+    "import sys\n",
+    "sys.path.insert(0, '../../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "rolled-hughes",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
+    "# WORKING ON IT\n",
+    "from FootballML.Classifiers.Individual.neural_network_classifier import test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2729c179",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It worked for neural network\n"
+     ]
+    }
+   ],
+   "source": [
+    "test()"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
