--- a/FootballML/Individual_Results/random_forest_results.ipynb
+++ b/FootballML/Individual_Results/random_forest_results.ipynb
@@ -6,7 +6,53 @@
    "id": "certified-pakistan",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the code for the classifier in this file and run everything here\n",
+    "# as a testing/results interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b1a6f681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert top level directory into the system path so parent and sibling \n",
+    "# modules can be imported \n",
+    "import sys\n",
+    "sys.path.insert(0, '../../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a4f4cf6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
+    "# WORKING ON IT\n",
+    "from FootballML.Classifiers.Individual.random_forest_classifier import test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a603dc39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It worked for random forest\n"
+     ]
+    }
+   ],
+   "source": [
+    "test()"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
