--- a/FootballML/Individual_Results/random_forest_results.ipynb
+++ b/FootballML/Individual_Results/random_forest_results.ipynb
@@ -21,7 +21,14 @@
     "# Insert top level directory into the system path so parent and sibling \n",
     "# modules can be imported \n",
     "import sys\n",
-    "sys.path.insert(0, '../../')"
+    "import pathlib\n",
+    "\n",
+    "# Convert path to use proper directory markers based on \n",
+    "# operating system\n",
+    "PATH = str(pathlib.Path('../../'))\n",
+    "\n",
+    "# Insert path to system path\n",
+    "sys.path.insert(0, PATH)"
    ]
   },
   {
