--- a/FootballML/Individual_Results/svm_results.ipynb
+++ b/FootballML/Individual_Results/svm_results.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d4c6d0c2",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,19 @@
     "# Insert top level directory into the system path so parent and sibling \n",
     "# modules can be imported \n",
     "import sys\n",
-    "sys.path.insert(0, '../../')"
+    "import pathlib\n",
+    "\n",
+    "# Convert path to use proper directory markers based on \n",
+    "# operating system\n",
+    "PATH = str(pathlib.Path('../../'))\n",
+    "\n",
+    "# Insert path to system path\n",
+    "sys.path.insert(0, PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d889c6d6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b1f0d176",
    "metadata": {},
    "outputs": [
