Pre-loaded the rest of the data

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -60,6 +60,35 @@
    "source": [
     "test()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bdfe3921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FootballML.Dataset.cleaned_data import read_game_data_from_files\n",
+    "from FootballML import DATA_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21289844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Cannot find file for year 2007\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2007 = read_game_data_from_files(2007)"
+   ]
   }
  ],
  "metadata": {
