Fixed root path error for DATA_PATH

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bdfe3921",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "21289844",
    "metadata": {},
    "outputs": [
@@ -84,10 +84,21 @@
      "text": [
       "ERROR: Cannot find file for year 2007\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/home/aleigator/FootballML/FootballML/FootballML/Dataset/Loaded_Raw_Data'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2007 = read_game_data_from_files(2007)"
+    "data2007 = read_game_data_from_files(2007)\n",
+    "DATA_PATH"
    ]
   }
  ],
